--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Зезюлина Наталья</title>
-    <link href="../ABOUT-ME-/style/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="../ABOUT-ME-/style/style.css">
 
 </head>
 
